--- a/CQPmq/CQPmq.vcxproj.filters
+++ b/CQPmq/CQPmq.vcxproj.filters
@@ -43,6 +43,6 @@
     <Library Include="CQP.lib" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="com.example.democ.json" />
+    <None Include="com.everpcpc.cqpmq.json" />
   </ItemGroup>
 </Project>
