--- a/CQPmq/CQPmq.vcxproj
+++ b/CQPmq/CQPmq.vcxproj
@@ -73,10 +73,12 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>beanstalk-client.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="appmain.h" />
+    <ClInclude Include="beanstalk.h" />
     <ClInclude Include="cqp.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -97,6 +99,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <Library Include="beanstalk-client.lib" />
     <Library Include="CQP.lib" />
   </ItemGroup>
   <ItemGroup>
