--- a/CQPmq/CQPmq.vcxproj.filters
+++ b/CQPmq/CQPmq.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="appmain.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="beanstalk.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -41,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Library Include="CQP.lib" />
+    <Library Include="beanstalk-client.lib" />
   </ItemGroup>
   <ItemGroup>
     <None Include="com.everpcpc.cqpmq.json" />
