--- a/CQPmq/CQPmq.vcxproj
+++ b/CQPmq/CQPmq.vcxproj
@@ -78,6 +78,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="appmain.h" />
+    <ClInclude Include="base64.h" />
     <ClInclude Include="beanstalk.h" />
     <ClInclude Include="cqp.h" />
     <ClInclude Include="stdafx.h" />
@@ -85,6 +86,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="appmain.cpp" />
+    <ClCompile Include="base64.cpp" />
     <ClCompile Include="dllmain.cpp">
       <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</CompileAsManaged>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
